# pocket-prometheus

./: Cargo.toml  readme.md
nodejs-example-app/: index.js  package.json  pnpm-lock.yaml
src/: collector.rs  get_metrics.rs  graph_render.rs  main.rs  parser.rs  plain_render.rs  query.rs  stdout.rs  user_input.rs
tests/: example_python_metrics.txt
