[package]
name = "pocket-prometheus"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Simple TUI for prometheus metrics scraping"
homepage = "https://github.com/sukovanej/pocket-prometheus/"
repository = "https://github.com/sukovanej/pocket-prometheus/"
readme = "readme.md"
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
nom = { version = "7.1.3" }
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures = "0.3.27"
terminal_size = "0.2.5"
clap = { version = "4.1.8", features = ["derive"] }
anyhow = "1.0.69"
